--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "express": "^4.18.1",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "tw-elements": "^1.0.0-alpha12",
